# akademy-classe

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
trytond/modules/akademy_classe/: README.md  __init__.py  classe.py  classe.xml  company.py  company.xml  configuration.py  configuration.xml  configuration_data.xml  report.py  report.xml  setup.py  tryton.cfg  variables.py
trytond/modules/akademy_classe/locale/: en.po  fr.po  pt.po
trytond/modules/akademy_classe/reports/: academic_level.odt  classes.odt  classes_student_timerule.odt  classes_students.odt  classes_teacher_timerule.odt  classes_teachers.odt  classes_timerule.odt  discipline_lessons.odt  matriculation.odt  matriculation_state.odt  matriculation_teacher.odt  studyplan.odt
trytond/modules/akademy_classe/security/: access_rights_admin.xml  access_rights_direct.xml  access_rights_secret.xml  access_rights_student.xml  access_rights_teacher.xml
trytond/modules/akademy_classe/tests/: __init__.py  test_classe.py  test_company.py  test_configuration.py  test_report.py
trytond/modules/akademy_classe/view/: academiclevel_form.xml  academiclevel_list.xml  area_form.xml  avaliation_form.xml  avaliation_type_form.xml  classe_form.xml  classe_list.xml  classe_student_discipline_form.xml  classe_student_discipline_list.xml  classe_student_form.xml  classe_student_list.xml  classe_student_presence_form.xml  classe_student_presence_list.xml  classe_teacher_discipline_form.xml  classe_teacher_discipline_list.xml  classe_teacher_form.xml  classe_teacher_lesson_form.xml  classe_teacher_lesson_list.xml  (+36 more)
