[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akademy_classe"
version = "1.0.0"
description = "O SAGE Education é um projeto livre e gratuito para educadores, instituições de ensino e governos."
authors = [
    { name = "Zacarias Juliano Capingala", email = "zacariasjuliano@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "akademy_party==1.0",
    "akademy_company==1.0.1",
]

[project.urls]
Homepage = "https://comunidadedosaber.ao"
Documentation = "https://docs.comunidadedosaber.ao"
Demo = "https://sage.comunidadedosaber.ao"
Repository = "https://github.com/comunidadedosaber/akademy-classe"
"Bug Tracker" = "https://github.com/comunidadedosaber/akademy-classe/issues"

[tool.hatch.build]
exclude = ["dist"]

[tool.hatch.build.targets.wheel]
packages = ["trytond"]
